Fix for nested Grid alignment (with IE-specific hack) #237

--- a/src/Column/column.css
+++ b/src/Column/column.css
@@ -2,6 +2,8 @@ $shark: 768px;
 
 .default
 {
+    flex:               1 0 0%;
+
     position:           relative;
     display:            flex;
     flex-direction:     column;
@@ -12,26 +14,39 @@ $shark: 768px;
 
     max-width:          100%;
     min-width:          0;
-
-    flex:               1 0 0%;
 }
 
 .alignX__left
 {
     align-items:    flex-start;
     text-align:     left;
+
+    .default /* hack for IE */
+    {
+        align-items:    lex-start;
+    }
 }
 
 .alignX__center
 {
     align-items:    center;
     text-align:     center;
+
+    .default /* hack for IE */
+    {
+        align-items:     center;
+    }
 }
 
 .alignX__right
 {
     align-items:    flex-end;
     text-align:     right;
+
+    .default /* hack for IE */
+    {
+        align-items:    flex-end;
+    }
 }
 
 .alignY__middle
