--- a/src/Grid/grid.css
+++ b/src/Grid/grid.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items:    stretch;
 
+    width:          auto;
     max-width:      none;
 
     margin-bottom:  0;
@@ -80,7 +81,6 @@
 
 .gutters__S
 {
-    width:          calc( 100% + 1rem );
     margin-left:    -0.5rem;
     margin-right:   -0.5rem;
 
@@ -92,7 +92,6 @@
 }
 .gutters__M
 {
-    width:          calc( 100% + 2rem );
     margin-left:    -1rem;
     margin-right:   -1rem;
 
@@ -104,7 +103,6 @@
 }
 .gutters__L
 {
-    width:          calc( 100% + 3rem );
     margin-left:    -1.5rem;
     margin-right:   -1.5rem;
 
